--- a/gm_pr/templates/pr.html
+++ b/gm_pr/templates/pr.html
@@ -2,12 +2,10 @@
 <h1>Current PR</h1>
 
 {% for project in project_list %}
-<p>{{project.name}}</p>
-<div class="project">
+<h2>{{project.name}}</h2>
 <ul>
 {% for pr in project.pr_list %}
-    <li><a href="{{pr.url}}">{{pr.title}}</a> {{pr.updated_at}} {{pr.user}}</li>
+    <li><a href="{{pr.url}}">{{pr.title}}</a> <!-- {{pr.updated_at}} --> {{pr.user}} {{pr.nbreview}}</li>
 {% endfor %}
 </ul>
-</div>
 {% endfor %}
