--- a/gm_pr/templates/pr.html
+++ b/gm_pr/templates/pr.html
@@ -1,11 +1,13 @@
-<!-- TODO: header -->
+{% extends "base.html" %}
+{% block content %}
 <h1>Current PR</h1>
 
 {% for project in project_list %}
 <h2>{{project.name}}</h2>
 <ul>
 {% for pr in project.pr_list %}
-    <li><a href="{{pr.url}}">{{pr.title}}</a> <!-- {{pr.updated_at}} --> {{pr.user}} {{pr.nbreview}}</li>
+    <li><a href="{{pr.url}}">{{pr.title}}</a> <span class="user">{{pr.user}}</span> <span class="nbrev">{{pr.nbreview}}</span></li>
 {% endfor %}
 </ul>
 {% endfor %}
+{% endblock %}
