count "+1" and LGTM

--- a/gm_pr/templates/base.html
+++ b/gm_pr/templates/base.html
@@ -1,5 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+  <style>
+    .nbrev {
+       color: red;
+    }
+    .lgtm {
+      color: blue;
+    }
+    .plusone {
+      color: green;
+    }
+  </style>
 <head>
   <title>{% block title %}GM PR{% endblock %}</title>
 </head>
