Add Labels & Milestones

--- a/gm_pr/templates/base.html
+++ b/gm_pr/templates/base.html
@@ -10,6 +10,13 @@
     .plusone {
       color: green;
     }
+    .milestone {
+      color: grey;
+      font-weight:bold;
+    }
+    .label {
+      font-weight:bold;
+    }
   </style>
 <head>
   <title>{% block title %}GM PR{% endblock %}</title>
