Set Label color in background instead of as text color, for web view

--- a/gm_pr/templates/pr.html
+++ b/gm_pr/templates/pr.html
@@ -11,7 +11,7 @@
             <span class="milestone">{{pr.milestone}}</span> |
         {% endif %}
         {% if pr.label %}
-            <span style="color:#{{pr.label.color}}" class="label">{{pr.label.name}}</span> |
+            <span style="background-color:#{{pr.label.color}}" class="label">{{pr.label.name}}</span> |
         {% endif %}
         <a href="{{pr.url}}">{{pr.title}}</a> <span class="user">{{pr.user}}</span> <span class="nbrev">number of review:</span> {{pr.nbreview}} <span class="lgtm">number of LGTM:</span> {{pr.lgtm}} <span class="plusone">number of plusone:</span> {{pr.plusone}}
     </li>
