--- a/gm_pr/templates/base.html
+++ b/gm_pr/templates/base.html
@@ -17,6 +17,10 @@
     .label {
       font-weight:bold;
     }
+    .old {
+      font-weight:bold;
+      background-color:#f2ed00
+    }
   </style>
 <head>
   <title>{% block title %}GM PR{% endblock %}</title>
