--- a/gm_pr/static/gm_pr.css
+++ b/gm_pr/static/gm_pr.css
@@ -50,9 +50,10 @@ td a:hover {
 .labelname {
   font-size: 0.7em;
   box-shadow: 1px 1px 2px #333;
+  text-shadow: 1px 1px 1px #222;
   font-family: sans-serif;
   padding: 1px;
-  color: #333;
+  color: #fff;
 }
 .old{
   width: 50px;
