--- a/gm_pr/templates/base.html
+++ b/gm_pr/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>{% block title %}GM PR{% endblock %}</title>
-    <link rel="stylesheet" type="text/css" href="/static/gm_pr.css">
+    <link rel="stylesheet" type="text/css" href="static/gm_pr.css">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   </head>
   <body>
