--- a/gm_pr/templates/base.html
+++ b/gm_pr/templates/base.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html public "-//W3C//DTD HTML 4.0//EN">
 <html lang="en">
   <head>
-    <title>{% block title %}GM PR{% endblock %}</title>
+    <title>{{title}}</title>
     <link rel="stylesheet" type="text/css" href="static/gm_pr.css">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   </head>
   <body>
+    <h1>{{title}}</h1>
   {% block content %}{% endblock %}
   </body>
 </html>
