--- a/gm_pr/templates/base.html
+++ b/gm_pr/templates/base.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html public "-//W3C//DTD HTML 4.0//EN">
 <html lang="en">
+{% load staticfiles %}
   <head>
     <title>{{title}}</title>
-    <link rel="stylesheet" type="text/css" href="static/gm_pr.css">
+    <link rel="stylesheet" type="text/css" href="{% static "gm_pr.css" %}">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   </head>
   <body>
