Issue #22: Improve label rendering.
Use a white text on dark labels, and dark text on white labels.

--- a/gm_pr/templates/pr.html
+++ b/gm_pr/templates/pr.html
@@ -21,7 +21,7 @@
                 <td class="milestone">{% if pr.milestone %}{{pr.milestone}}{% endif %}</td>
                 <td class="label">
                 {% for label in pr.labels %}
-                    <span class="labelname" style="background-color:#{{label.color}}">{{label.name}}</span>
+                    <span class="labelname labelname-{{label.style}}" style="background-color:#{{label.color}}">{{label.name}}</span>
                 {% endfor %}
                 </td>
                 <td class="old">{% if pr.is_old %}<span class="highlight">OLD</span>{% endif %}</td>
