--- a/gm_pr/static/gm_pr.css
+++ b/gm_pr/static/gm_pr.css
@@ -50,10 +50,14 @@ td a:hover {
 .labelname {
   font-size: 0.7em;
   box-shadow: 1px 1px 2px #333;
-  text-shadow: 1px 1px 1px #222;
   font-family: sans-serif;
   padding: 1px;
+}
+.labelname-dark {
   color: #fff;
+}
+.labelname-light {
+  color: #000;
 }
 .old{
   width: 50px;
