Issue #24: Show the last update date in the web view

--- a/gm_pr/static/gm_pr.css
+++ b/gm_pr/static/gm_pr.css
@@ -38,6 +38,9 @@ td a:hover {
   padding-right: 2px;
   background-color: #d3dfd3;
 }
+.last-update {
+ width: 150px;
+}
 .milestone {
   color: grey;
   font-weight:bold;
