--- a/gm_pr/templates/pr.html
+++ b/gm_pr/templates/pr.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load humanize %}
 {% block content %}
 
 {% for project in project_list %}
@@ -7,6 +8,7 @@
         <div class="project-name">{{project.name}}</div>
         <table class="project">
             <tr>
+                <th>Last update</th>
                 <th>Milestone</th>
                 <th>Labels</th>
                 <th>OLD?</th>
@@ -18,6 +20,7 @@
             </tr>
         {% for pr in project.pr_list %}
             <tr class="pr">
+                <td class="last-update">{{pr.updated_at|naturaltime}}</td>
                 <td class="milestone">{% if pr.milestone %}{{pr.milestone}}{% endif %}</td>
                 <td class="label">
                 {% for label in pr.labels %}
