Issue #29: Dont use a bold font for the feedback icons.
This change makes the icon appear in Chrome on Mac.

--- a/gm_pr/static/gm_pr.css
+++ b/gm_pr/static/gm_pr.css
@@ -18,6 +18,9 @@ th {
     padding-left: 2px;
     padding-right: 2px;
 }
+th.feedback-name {
+  font-weight: normal;
+}
 tr:nth-child(even) {
     background: #ffffff;
 }
