add a genymobile and github icon in footer
 github icon 404 for now, but it should be the correct place in a few days
 genymobile go to the blog (should be the most intersting place for gm_pr user
and it is easy to learn about genymobile from here)

Writting a footer took a few hours of my life. After visiting all the internet
(twice) I found this link and I like to thanks this guy:
 http://stackoverflow.com/questions/3443606/make-footer-stick-to-bottom-of-page-correctly/18066619#18066619

--- a/gm_pr/static/gm_pr.css
+++ b/gm_pr/static/gm_pr.css
@@ -14,9 +14,15 @@ See the License for the specific language governing permissions and
 limitations under the License.
 */
 
+html {
+    position: relative;
+    min-height: 100%;
+}
 body {
     text-align: center;
     font-family: sans-serif;
+    margin-bottom: 35px; /* bottom = footer height */
+    padding: 25px;
 }
 .project-box {
     box-shadow: 2px 2px 5px #333;
@@ -116,4 +122,16 @@ td a:hover {
 }
 .feedback_ok {
     color: green;
+}
+footer {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 35px;
+    width: 100%;
+    overflow:hidden;
+}
+footer img {
+    margin-left: 5px;
+    margin-right: 5px;
 }
