--- a/gm_pr/templates/base.html
+++ b/gm_pr/templates/base.html
@@ -25,5 +25,6 @@ limitations under the License.
   <body>
     <h1>{{title}}</h1>
   {% block content %}{% endblock %}
+    <footer><a href="https://github.com/Genymobile/gm_pr"><img src="{% static "GitHub-Mark-32px.png" %}"><a href="http://www.genymobile.com/blog"><img src="{% static "genymobile.png" %}"></footer>
   </body>
 </html>
