explicitely use html5 doctype
fix html mistake
use django comment for license, this avoid license duplication with inclusion

--- a/gm_pr/templates/base.html
+++ b/gm_pr/templates/base.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+{% comment %}
 <!--
 Copyright 2015 Genymobile
 
@@ -13,8 +15,7 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
-
-<!DOCTYPE html public "-//W3C//DTD HTML 4.0//EN">
+{% endcomment %}
 <html lang="en">
 {% load staticfiles %}
   <head>
@@ -25,6 +26,6 @@ limitations under the License.
   <body>
     <h1>{{title}}</h1>
   {% block content %}{% endblock %}
-    <footer><a href="https://github.com/Genymobile/gm_pr"><img src="{% static "GitHub-Mark-32px.png" %}"><a href="http://www.genymobile.com/blog"><img src="{% static "genymobile.png" %}"></footer>
+    <footer><a href="https://github.com/Genymobile/gm_pr"><img src="{% static "GitHub-Mark-32px.png" %}" alt="github"></a><a href="http://www.genymobile.com/blog"><img src="{% static "genymobile.png" %}" alt="genymobile"></a></footer>
   </body>
 </html>
