--- a/gm_pr/templates/index.html
+++ b/gm_pr/templates/index.html
@@ -1,3 +1,5 @@
+{% extends "base.html" %}
+{% comment %}
 <!--
 Copyright 2015 Genymobile
 
@@ -13,8 +15,8 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
+{% endcomment %}
 
-{% extends "base.html" %}
 {% block content %}
 
 {% for project in project_list %}
