--- a/gm_pr/templates/base.html
+++ b/gm_pr/templates/base.html
@@ -18,14 +18,48 @@ limitations under the License.
 {% endcomment %}
 <html lang="en">
 {% load staticfiles %}
-  <head>
+<head>
     <title>{{title}}</title>
-    <link rel="stylesheet" type="text/css" href="{% static "gm_pr.css" %}">
+    <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.4/material.light_green-pink.min.css">
+    <script src="https://storage.googleapis.com/code.getmdl.io/1.0.4/material.min.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  </head>
-  <body>
-    <h1>{{title}}</h1>
-  {% block content %}{% endblock %}
-    <footer><a href="https://github.com/Genymobile/gm_pr"><img src="{% static "GitHub-Mark-32px.png" %}" alt="github"></a><a href="http://www.genymobile.com/blog"><img src="{% static "genymobile.png" %}" alt="genymobile"></a></footer>
-  </body>
+    <style>
+        footer {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        }
+    </style>
+</head>
+
+<body>
+<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+    <header class="mdl-layout__header">
+        <div class="mdl-layout__header-row">
+            <!-- Title -->
+            <span class="mdl-layout-title">{{title}}</span>
+            <!-- Add spacer, to align navigation to the right -->
+            <div class="mdl-layout-spacer"></div>
+        </div>
+    </header>
+    <main class="mdl-layout__content">
+        <div class="page-content">
+            {% block content %}{% endblock %}
+        </div>
+        <footer class="mdl-mini-footer">
+            <div class="mdl-mini-footer__left-section">
+                <div class="mdl-logo">gm_pr</div>
+                <ul class="mdl-mini-footer__link-list">
+                    <li><a href="https://github.com/Genymobile/gm_pr">View on Github</a></li>
+                    <li><a href="http://www.genymobile.com">About Genymobile</a></li>
+                </ul>
+            </div>
+        </footer>
+    </main>
+</div>
+
+</body>
 </html>
+
