--- a/gm_pr/templates/base.html
+++ b/gm_pr/templates/base.html
@@ -23,15 +23,8 @@ limitations under the License.
     <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.4/material.light_green-pink.min.css">
     <script src="https://storage.googleapis.com/code.getmdl.io/1.0.4/material.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" type="text/css" href="{% static 'gm_pr.css' %}">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <style>
-        footer {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        }
-    </style>
 </head>
 
 <body>
