--- a/gm_pr/templates/pr.html
+++ b/gm_pr/templates/pr.html
@@ -42,7 +42,7 @@ limitations under the License.
                 <th class="alignleft">User</th>
                 <th class="aligncenter">Reviews</th>
                 {% if request.GET.login %}
-                <th>My Open Comments</th>
+                <th class="alignleft">My Open Comments</th>
                 {% endif %}
                 <th class="aligncenter">{{feedback_ok|safe}}</th>
                 <th class="aligncenter">{{feedback_weak|safe}}</th>
@@ -72,14 +72,14 @@ limitations under the License.
                 <td class="user alignleft">{{pr.user}}</td>
                 <td class="nbrev aligncenter">{{pr.nbreview}}</td>
                 {% if request.GET.login %}
-                    <td>
+                    <td class="alignleft">
                         {% if pr.my_open_comment_count > 0 %}
                             {{pr.my_open_comment_count}}
                         {% endif %}
                     </td>
                 {% endif %}
                 <td class="feedback_ok aligncenter">{{pr.feedback_ok}}</td>
-                <td>{{pr.feedback_weak}}</td>
+                <td class="feedback_ok aligncenter">{{pr.feedback_weak}}</td>
                 <td class="feedback_ko aligncenter">{{pr.feedback_ko}}</td>
             </tr>
 
