Fix weak feedback color

--- a/gm_pr/templates/pr.html
+++ b/gm_pr/templates/pr.html
@@ -79,7 +79,7 @@ limitations under the License.
                     </td>
                 {% endif %}
                 <td class="feedback_ok aligncenter">{{pr.feedback_ok}}</td>
-                <td class="feedback_ok aligncenter">{{pr.feedback_weak}}</td>
+                <td class="aligncenter">{{pr.feedback_weak}}</td>
                 <td class="feedback_ko aligncenter">{{pr.feedback_ko}}</td>
             </tr>
 
