Remove footer from project page

--- a/gm_pr/templates/base.html
+++ b/gm_pr/templates/base.html
@@ -44,15 +44,7 @@ limitations under the License.
         <div class="page-content">
             {% block content %}{% endblock %}
         </div>
-        <footer class="mdl-mini-footer">
-            <div class="mdl-mini-footer__left-section">
-                <div class="mdl-logo">gm_pr</div>
-                <ul class="mdl-mini-footer__link-list">
-                    <li><a href="https://github.com/Genymobile/gm_pr">View on Github</a></li>
-                    <li><a href="http://www.genymobile.com">About Genymobile</a></li>
-                </ul>
-            </div>
-        </footer>
+        {%block footer %}{% endblock %}
     </main>
 </div>
 
