--- a/gm_pr/templates/index.html
+++ b/gm_pr/templates/index.html
@@ -18,7 +18,6 @@ limitations under the License.
 {% endcomment %}
 
 {% block content %}
-
 <div class="mdl-grid">
     {% for project in project_list %}
 
@@ -41,4 +40,16 @@ limitations under the License.
     </div>
     {% endfor %}
 </div>
+{% endblock %}
+
+{% block footer %}
+<footer class="mdl-mini-footer">
+    <div class="mdl-mini-footer__left-section">
+        <div class="mdl-logo">gm_pr</div>
+        <ul class="mdl-mini-footer__link-list">
+            <li><a href="https://github.com/Genymobile/gm_pr">View on Github</a></li>
+            <li><a href="http://www.genymobile.com">About Genymobile</a></li>
+        </ul>
+    </div>
+</footer>
 {% endblock %}
