Fix back to list link

--- a/gm_pr/templates/pr.html
+++ b/gm_pr/templates/pr.html
@@ -20,7 +20,7 @@ limitations under the License.
 
 
 {% block navigation %}
-        <a class="mdl-navigation__link" href="/">Back to project list</a>
+        <a class="mdl-navigation__link" href=".">Back to project list</a>
 {% endblock %}
 
 
